# gtd

./: .gitignore  README  README.md  gtd.cabal
src/GTD/: Actions.hs  Assets.hs  CLParser.hs  Configuration.hs  Main.hs  Tasks.hs
src/GTD/CLParser/: Combinators.hs  Primitives.hs
test/: MainTestSuite.hs
test/GTD/: CLParser.hs
test/GTD/CLParser/: Tests.hs
