name               : GTD
version            : 0.0.0
license            : BSD3
license-file       : LICENSE
author             : Jan Stolarek <jan.stolarek@p.lodz.pl>
copyright          : (c) 2013 Jan Stolarek
maintainer         : jan.stolarek@p.lodz.pl
bug-reports        : https://github.com/killy9999/gtd/issues
homepage           : https://github.com/killy9999/gtd
synopsis           : Command-line todo list manager
description        : Glorious Things Done (GTD) is a task list manager
                     supporting the Getting Things Done method. It is in early
                     experimental stage.
stability          : experimental
category           : Other
build-Type         : Simple
cabal-version      : >= 1.6
tested-with        : GHC>=7.4
extra-source-files : README

source-repository head
  type:     git
  location: git://github.com/killy9999/gtd.git

executable gtd
  main-is          : GTD/Main.hs
  hs-source-dirs   : src
  ghc-options      : -Wall
                     -O2
  build-depends    :  base,
                      time >= 1.4
  other-modules    :  GTD.Actions,
                      GTD.CLParser,
                      GTD.CLParser.Primitives,
                      GTD.Configuration,
                      GTD.Tasks

test-suite gtd-tests
  type             : exitcode-stdio-1.0
  hs-source-dirs   : test, src
  main-is          : MainTestSuite.hs
  build-depends    : base,
                     HUnit,
                     test-framework,
                     test-framework-hunit

